Simplified Source in Schema and adjusted meta-data / references
